raw/AGNESIA TATONTOS FEVOURA 6427 245150207111058/2024-11-14-08-23-48.ceg/compilation.txt
NT.java:22: error: <identifier> expected
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi, Double akhir){
           ^
NT.java:22: error: '(' expected
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi, Double akhir){
            ^
2 errors
Not compiled
